fixed contact box padding/margin on firefox

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -407,7 +407,8 @@ a{
 
 	background-color: #0E0851;
 	color: $paleBack;
-	margin: 0;
+	margin: 0 0 0 -1em;
+	padding: 1em 0;
 	width: 100%;
 
 	h3{
